# playground

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: common.hpp.D986AF5060011793.idx  hyperparams.hpp.9893AC28DD14B941.idx  logging.hpp.FD8C140B365BEA0A.idx  main.cu.D55E735370662CCB.idx  matmul.hpp.08559CDA0F645746.idx  matmul_f16_v0_cblas.cpp.955C6A58A0FC3285.idx  matmul_f16_v1_tensor-core.cu.2E2A21CA230AA471.idx  matmul_f16_v2_block-tiling_smem.cu.FC37BFF3B6D84082.idx  matmul_f16_v3_warp-tiling_swizz.cu.0414360A6FA9F6A2.idx  matmul_f16_v4_async-copy.cu.57B383655F6E3026.idx  matmul_f16_v5_opt-pipeline_4-buffer.cu.688A723E9697BAAA.idx  matmul_f16_v6_opt-pipleine_2-buffer.cu.5F1ACF2F58730E95.idx  matmul_f16_v7_opt-pipeline_3-buffer.cu.B314BE5CAB1F619C.idx  matmul_f32_v0_cblas.cpp.D3B5C66B6F3AD6CF.idx  matmul_f32_v1_cuda-core.cu.05380B6D349AAC52.idx  matmul_f32_v2_naive.cu.B3043408D5812E31.idx  matmul_f32_v3_block-tiling_shmem.cu.2D04F86EE3D708B9.idx  matmul_f32_v4_reduce-bank-conflict.cu.9EC4BD7E344DB694.idx  matmul_f32_v5_opt-pipeline_2-buffer.cu.536810C46DAD44CD.idx  parameters.hpp.ABAC81CBDF1C2E85.idx  ptx.hpp.616219A03486FEE2.idx  static.hpp.2630ADF6E7CF9693.idx  system.hpp.AC1B154CEC51CF98.idx  utils.hpp.CF0F2F00D869D075.idx
.github/workflows/: ci-auto-format-and-commit.yml
scripts/: build-task1.sh  nsight-profile.sh
task-1/: CMakeLists.txt  README.md  vcpkg.json
task-1/cmake/: Macros.cmake
task-1/include/playground/: common.hpp  cublas_handle.hpp  hyperparams.hpp  logging.hpp  matmul.hpp  parameters.hpp  ptx.hpp  system.hpp  test_data.hpp  utils.hpp
task-1/include/playground/utils/: address.hpp
task-1/scripts/: build.sh
task-1/src/: CMakeLists.txt  main.cpp
task-1/src/matmul_f16/: matmul_f16_v0_cblas.cpp  matmul_f16_v1_tensor-core.cu  matmul_f16_v2_block-tiling_smem.cu  matmul_f16_v3_warp-tiling_swizz.cu  matmul_f16_v4_async-copy.cu  matmul_f16_v5_opt-pipeline_4-buffer.cu  matmul_f16_v6_opt-pipleine_2-buffer.cu  matmul_f16_v7_opt-pipeline_3-buffer.cu
task-1/src/matmul_f32/: matmul_f32_v0_cblas.cpp  matmul_f32_v1_cuda-core.cu  matmul_f32_v2_naive.cu  matmul_f32_v3_block-tiling_shmem.cu  matmul_f32_v4_reduce-bank-conflict.cu  matmul_f32_v5_opt-pipeline_2-buffer.cu
task-2/: pyproject.toml
task-2/test/: test.py
task-2/tritonPlayground/benchmark/: __init__.py  benchmark.py
task-2/tritonPlayground/kernels/official/: add.py  dropout.py  fused_softmaxl.py  matmul.py  softmax.py
task-2/tritonPlayground/operators/: __init__.py  add.py  dropout.py  matmul.py  softmax.py
task-2/tritonPlayground/utils/: device.py  registry.py
